added more style to .bio

--- a/index.html
+++ b/index.html
@@ -14,41 +14,45 @@
         <li>CONTACT</li>
       </ul>
     </nav>
-    <section class="about">
-      <div class="header">
-        <h1>Hi, I'm Samira Estes-Garcia!</h1>
-        <h2>I’m a full-stack web developer out of San Antonio, TX.</h2>
-      </div>
-      <div class="bio">
-        <img src="images/headshot.jpg" alt="Samira's headshot" />
-        <div class="p-container">
-          <p>
-            I graduated from the University of Texas with a B.S in Nutritional
-            Sciences, I learned a lot but ultimately decided it wasn’t for me.
-            In February 2019, I enrolled in a Front End web development course
-            with Thinkful and graduated in Aug 2019. Soon after, I received a
-            full scholarship with Out In Tech X Flatiron for Flatiron's Full
-            Stack Software Engineering Immersive program. I am now freelancing
-            while actively searching for web dev roles and going through
-            Flatiron's course!
-          </p>
-          <p>
-            Coding started out as a passion project, a new skill to pick up
-            while I was thinking about what to do next. What I thought was going
-            to be fun hobby turned out to be the launch of a fun career! I love
-            building mobile and web apps and just find it so satisfying to see
-            my creations come to life in real time. The problem solver in me
-            loves debugging and the creative in me utilizes a design and
-            responsive first approach. I am always looking for new opportunities
-            and challenges. Contact me at samira.estes.garcia@gmail.com if you
-            are interested in working together.
-          </p>
-          <button>My Resume</button>
+    <main>
+      <section class="about">
+        <div class="header">
+          <h1>Hi, I'm Samira Estes-Garcia!</h1>
+          <h2>I’m a full-stack web developer out of San Antonio, TX.</h2>
         </div>
-      </div>
-    </section>
-    <section class="work"></section>
-    <section class="contact"></section>
-    <section class="footer"></section>
+        <div class="bio">
+          <img src="images/headshot.jpg" alt="Samira's headshot" />
+          <div class="p-container">
+            <p>
+              I graduated from the University of Texas with a B.S. in
+              Nutritional Sciences (hook ‘em!). I found coding shortly after and
+              was elated to be able to channel my love for science in a totally
+              different and exciting way! Soon after, I received a full
+              scholarship with Out In Tech x Flatiron for Flatiron's Full Stack
+              Software Engineering Immersive program. I am now freelancing while
+              actively searching for web dev roles and going through Flatiron's
+              course!
+            </p>
+            <p>
+              I love building mobile and web apps and just find it so satisfying
+              to see my creations come to life in real time. The problem solver
+              in me loves debugging and the creative in me utilizes a design and
+              responsive first approach. When I'm not coding, you can find me
+              sipping sweet tea while working on my first novel and soaking up
+              some glorious Texas sunshine.
+            </p>
+            <button
+              type="submit"
+              onclick="window.open('images/SEG_Resume_2020.pdf')"
+            >
+              MY RESUME
+            </button>
+          </div>
+        </div>
+      </section>
+      <section class="work"></section>
+      <section class="contact"></section>
+      <section class="footer"></section>
+    </main>
   </body>
 </html>
