--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Samira EG Full Stack Developer</title>
+    <title>Samira Estes-Garcia</title>
   </head>
   <body>
     <nav>
@@ -53,24 +53,27 @@
       <section id="work">
         <h1>WORK</h1>
         <div class="project-container">
-          <div class="project">
+          <div class="project project-1">
+            <img src="images/ATX Quiz.png" />
             <div class="project-title">
-              <h2>Title</h2>
+              <p>ATX Quiz App<span>HTML, CSS, JavaScript, jQuery</span></span></p>
             </div>
           </div>
-          <div class="project">
+          <div class="project project-2">
+            <img src="images/wishlistar-img.png" class="project-2-img" />
             <div class="project-title">
-              <h2>Title</h2>
+              <p>Wishlista<span>Ruby, ActiveRecord, Sinatra, SQL</span>r</p>
             </div>
           </div>
-          <div class="project">
+          <div class="project project-3">
+            <img src="images/daily-meals-img.png" />
             <div class="project-title">
-              <h2>Title</h2>
+              <p>Daily Meals<span>Ruby</span></p>
             </div>
           </div>
-          <div class="project">
+          <div class="project project-4">
             <div class="project-title">
-              <h2>Title</h2>
+              <p>Coming Soon!</p>
             </div>
           </div>
         </div>
@@ -82,7 +85,7 @@
           if you are interested in working together!
         </h2>
         <form
-          action="https://formspree.io/moqwgnvp"
+          action="https://formspree.io/xdowzdkp"
           method="POST"
           id="contact-form"
         >
