added media queries;

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" type="image/jpg" href="images/favicon.png" />
+    <link rel="icon" type="image/jpg" href="assetsicons/samira-logo.svg" />
     <title>Samira Estes-Garcia</title>
   </head>
   <body>
@@ -40,14 +40,14 @@
               in me loves debugging and the creative in me utilizes a design and
               responsive first approach. When I'm not coding, you can find me
               sipping sweet tea while working on my first novel and soaking up
-              some glorious Texas sunshine.
-            </p>
-            <button
+              some glorious Texas sunshine.<br>
+              <button
               type="submit"
               onclick="window.open('images/SEG_Resume_2020.pdf')"
             >
               MY RESUME
             </button>
+            </p>
           </div>
         </div>
       </section>
@@ -148,6 +148,21 @@
             >
               <object type="image/svg+xml" data="assetsicons/linkedin.svg" class="linkedin"></object>
             </a>
+            <div class="credits">
+              <p class="p-1">
+                Samira Estes-Garcia
+                <span class="copyright"
+                  ><img src="assetsicons/copyright.svg" /></span
+                >2020
+              </p>
+              <p class="p-2">
+                <a
+                  href="https://www.linkedin.com/in/brittany-estes-garcia/"
+                  target="_blank"
+                  >Design by Brittany Estes-Garcia</a
+                >
+              </p>
+            </div>
           </div>
         </footer>
       </section>
