changed objects to img files social icons

--- a/index.html
+++ b/index.html
@@ -132,22 +132,28 @@
           </div>
           <div class="social-icons">
             <div class="tooltip">
-              <object type="image/svg+xml" data="assetsicons/envelope.svg" class="mail">
-              </object>
+              
+              <!-- <object type="image/svg+xml" data="assetsicons/envelope.svg" class="mail">
+              </object> -->
+              <img src="assetsicons/envelope.svg" alt="envelope icon" class="mail"/>
               <span class="tooltiptext">samira.estes.garcia@gmail.com</span>
             </div>
             <a
               href="https://github.com/samira-estes-garcia"
               target="_blank"
             >
-              <object type="image/svg+xml" data="assetsicons/github-image.svg" class="github"></object>
+              <!-- <object type="image/svg+xml" data="assetsicons/github-image.svg" class="github"></object> -->
+              <img src="assetsicons/github-image.svg" alt="github icon" class="github"/>
             </a> 
             <a
               href="https://www.linkedin.com/in/samira-estes-garcia/"
               target="_blank"
             >
-              <object type="image/svg+xml" data="assetsicons/linkedin.svg" class="linkedin"></object>
+            
+              <!-- <object type="image/svg+xml" data="assetsicons/linkedin.svg" class="linkedin"></object>-->
+              <img src="assetsicons/linkedin.svg" alt="linkedin icon" class="linkedin" />            
             </a>
+        </div>
             <div class="credits">
               <p class="p-1">
                 Samira Estes-Garcia
