--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               some glorious Texas sunshine.<br>
               <button
               type="submit"
-              onclick="window.open('images/SEG_Resume_2020.pdf')"
+              onclick="window.open('images/Samira Estes-Garcia Resume.pdf')"
             >
               MY RESUME
             </button>
