display project-title span as block for  stacked change font-size for credits

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <div class="project project-2">
             <a href="https://github.com/samira-estes-garcia/wishlistar" target="_blank"><img src="images/wishlistar-img.png" class="project-2-img" /></a>
             <div class="project-title project-title-2">
-              <p>Wishlista<span>Ruby, ActiveRecord, Sinatra, SQL, Bulma</span>r</p>
+              <p>Wishlistar<span>Ruby, ActiveRecord, Sinatra, SQL, Bulma</span></p>
             </div>
           </div>
           <div class="project project-3">
