add code by in the credits

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         </div>
             <div class="credits">
               <p class="p-1">
-                Samira Estes-Garcia
+                Code by Samira Estes-Garcia
                 <span class="copyright"
                   ><img src="assetsicons/copyright.svg" /></span
                 >2020
