added we cook to projects section and tweaked sizing to accomodate it

--- a/index.html
+++ b/index.html
@@ -55,26 +55,27 @@
         <h1>WORK</h1>
         <div class="project-container">
           <div class="project project-1">
-            <a href="https://github.com/samira-estes-garcia/ATX-Quiz" target="_blank"><img src="images/ATX Quiz.png" /></a>
-            <div class="project-title">
-              <p>ATX Quiz App<span>HTML, CSS, JavaScript, jQuery</span></span></p>
+            <a href="https://github.com/samira-estes-garcia/we_cook" target="_blank"><img src="images/we_cook-img.png" /></a>
+            <div class="project-title project-title-1">
+              <p>We Cook<span>Ruby on Rails, JavaScript, Bootstrap</span></p>
             </div>
           </div>
           <div class="project project-2">
-            <a href="https://github.com/samira-estes-garcia/wishlistar" target="_blank"><img src="images/wishlistar-img.png" class="project-2-img" /></a>
+            <a href="https://github.com/samira-estes-garcia/ATX-Quiz" target="_blank"><img src="images/ATX Quiz.png" /></a>
             <div class="project-title project-title-2">
-              <p>Wishlistar<span>Ruby, ActiveRecord, Sinatra, SQL, Bulma</span></p>
+              <p>ATX Quiz App<span>HTML, CSS, JavaScript, jQuery</span></p>
             </div>
           </div>
           <div class="project project-3">
-            <a href="https://github.com/samira-estes-garcia/daily_meals" target="_blank"><img src="images/daily-meals-img.png" /></a>
-            <div class="project-title">
-              <p>Daily Meals<span>Ruby, CLI</span></p>
+            <a href="https://github.com/samira-estes-garcia/wishlistar" target="_blank"><img src="images/wishlistar-img.png" /></a>
+            <div class="project-title project-title-3">
+              <p>Wishlistar<span>Ruby, ActiveRecord, Sinatra, SQL, Bulma</span></p>
             </div>
           </div>
           <div class="project project-4">
-            <div class="project-title">
-              <p>Coming Soon!</p>
+            <a href="https://github.com/samira-estes-garcia/daily_meals" target="_blank"><img src="images/daily-meals-img.png" /></a>
+            <div class="project-title project-title-4">
+              <p>Daily Meals<span>Ruby, CLI</span></p>
             </div>
           </div>
         </div>
