changed link to resume in html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               some glorious Texas sunshine.<br>
               <button
               type="submit"
-              onclick="window.open('images/Samira Estes-Garcia Resume.pdf')"
+              onclick="window.open('images/Samira-Estes-Garcia-Resume.pdf')"
             >
               MY RESUME
             </button>
