added brittanys website instead of linkedin

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
               </p>
               <p class="p-2">
                 <a
-                  href="https://www.linkedin.com/in/brittany-estes-garcia/"
+                  href="https://brittanyestesgarcia.com"
                   target="_blank"
                   >Design by Brittany Estes-Garcia</a
                 >
