--- a/index.html
+++ b/index.html
@@ -51,13 +51,55 @@
           </div>
         </div>
       </section>
+      <!-- Work Section -->
       <section id="work">
         <h1>WORK</h1>
+        <div class="card-container">
+          <div class="card card-1">
+            <img src="images/journal_crypt.png">
+            <div class="description description-1">
+              <h1>Journal Crypt</h1>
+              <h2>Journal Crypt is a React application with a Ruby on Rails JSON API backend. Users are authenticated with JSON web tokens through the use of the Knock gem. They are able to post private journal entries that only they have access to. Users have full CRUD functionality with their entries and are able to persist them to the database. Users will soon be able to encrypt individual entries.</h2>
+              <p>Languages Used: React/Redux Client, Ruby on Rails API, Bootstrap</p>
+              <button onClick="parent.open('https://github.com/samira-estes-garcia/journal_crypt_client')">View Project</button>
+            </div>
+          </div>
+          <div class="card card-2">
+            <img src="images/">
+            <div class="description description-2">
+              <h1></h1>
+              <h2></h2>
+              <p></p>
+              <button onClick="parent.open('https://github.com/samira-estes-garcia/journal_crypt_client')">View Project</button>
+            </div>
+          </div>
+          <div class="card card-3">
+            <img src="images/">
+            <div class="description description-3">
+              <h1></h1>
+              <h2></h2>
+              <p></p>
+              <button onClick="parent.open('https://github.com/samira-estes-garcia/journal_crypt_client')">View Project</button>
+            </div>
+          </div>
+          <div class="card card-4">
+            <img src="images/">
+            <div class="description description-4">
+              <h1></h1>
+              <h2></h2>
+              <p></p>
+              <button onClick="parent.open('https://github.com/samira-estes-garcia/journal_crypt_client')">View Project</button>
+            </div>
+          </div>
+        </div>
+        <!-- <h1>WORK</h1>
         <div class="project-container">
           <div class="project project-1">
             <a href="https://github.com/samira-estes-garcia/we_cook" target="_blank"><img src="images/we_cook-img.png" /></a>
             <div class="project-title project-title-1">
-              <p>We Cook<span>Ruby on Rails, JavaScript, Bootstrap</span></p>
+              <h1>We Cook</h1>
+              <h2>Description</h2>
+              <p>Ruby on Rails, JavaScript, Bootstrap</p>
             </div>
           </div>
           <div class="project project-2">
@@ -78,7 +120,7 @@
               <p>Daily Meals<span>Ruby, CLI</span></p>
             </div>
           </div>
-        </div>
+        </div> -->
       </section>
       <section id="contact">
         <h1>CONTACT</h1>
