deleted all old code, added all html and styles for new cards

--- a/index.html
+++ b/index.html
@@ -56,71 +56,58 @@
         <h1>WORK</h1>
         <div class="card-container">
           <div class="card card-1">
-            <img src="images/journal_crypt.png">
-            <div class="description description-1">
-              <h1>Journal Crypt</h1>
-              <h2>Journal Crypt is a React application with a Ruby on Rails JSON API backend. Users are authenticated with JSON web tokens through the use of the Knock gem. They are able to post private journal entries that only they have access to. Users have full CRUD functionality with their entries and are able to persist them to the database. Users will soon be able to encrypt individual entries.</h2>
-              <p>Languages Used: React/Redux Client, Ruby on Rails API, Bootstrap</p>
-              <button onClick="parent.open('https://github.com/samira-estes-garcia/journal_crypt_client')">View Project</button>
+            <div class="info-container">
+              <div class="img-container img-container-1">
+                <img src="images/journal_crypt.png">
+              </div>
+              <div class="description description-1">
+                <h2>Journal Crypt</h2>
+                <h3>Journal Crypt is a React application with a Ruby on Rails JSON API backend. Users can CRUD private journal entries that only they have access to.</h3>
+                <p>Languages Used: React/Redux Client, Ruby on Rails API, Bootstrap</p>
+                <button class="view" onClick="parent.open('https://github.com/samira-estes-garcia/journal_crypt_client')">VIEW PROJECT</button>
+              </div>
             </div>
           </div>
           <div class="card card-2">
-            <img src="images/">
-            <div class="description description-2">
-              <h1></h1>
-              <h2></h2>
-              <p></p>
-              <button onClick="parent.open('https://github.com/samira-estes-garcia/journal_crypt_client')">View Project</button>
-            </div>
+            <div class="info-container">
+              <div class="img-container">
+                <img src="images/we_cook-img.png">
+              </div>
+              <div class="description description-2">
+                <h2>WeCook!</h2>
+                <h3>WeCook is a rails application that allows users to upload their recipes to the website in order to share it with others. Users have full CRUD functionality with their accounts and their recipes.</h3>
+                <p>Languages Used: Ruby on Rails, JavaScript, Bootstrap, OmniAuth Gem, Devise Gem</p>
+                <button class="view" onClick="parent.open('https://github.com/samira-estes-garcia/we_cook')">VIEW PROJECT</button>
+              </div>
+          </div>
           </div>
           <div class="card card-3">
-            <img src="images/">
+            <div class="info-container">
+            <div class="img-container">
+              <img src="images/wishlistar-img.png">
+            </div>
             <div class="description description-3">
-              <h1></h1>
-              <h2></h2>
-              <p></p>
-              <button onClick="parent.open('https://github.com/samira-estes-garcia/journal_crypt_client')">View Project</button>
+              <h2>Wishlistar</h2>
+              <h3>WishListar is a CRUD application that allows users to create accounts where they can create and store items in their custom wishlists. WishListar helps users store any items they may desire from across the internet.</h3>
+              <p>Languages Used: Ruby, ActiveRecord, Sinatra, SQL, Bulma</p>
+              <button class="view" onClick="parent.open('https://github.com/samira-estes-garcia/journal_crypt_client')">VIEW PROJECT</button>
+            </div>
             </div>
           </div>
           <div class="card card-4">
-            <img src="images/">
+            <div class="info-container">
+            <div class="img-container">
+              <img src="images/daily-meals-img.png">
+            </div>
             <div class="description description-4">
-              <h1></h1>
-              <h2></h2>
-              <p></p>
-              <button onClick="parent.open('https://github.com/samira-estes-garcia/journal_crypt_client')">View Project</button>
+              <h2>Daily Meals</h2>
+              <h3>A CLI Gem that will help the user choose what to cook for their meal.</h3>
+              <p>Languages Used: Ruby</p>
+              <button class="view" onClick="parent.open('https://github.com/samira-estes-garcia/journal_crypt_client')">VIEW PROJECT</button>
+            </div>
             </div>
           </div>
         </div>
-        <!-- <h1>WORK</h1>
-        <div class="project-container">
-          <div class="project project-1">
-            <a href="https://github.com/samira-estes-garcia/we_cook" target="_blank"><img src="images/we_cook-img.png" /></a>
-            <div class="project-title project-title-1">
-              <h1>We Cook</h1>
-              <h2>Description</h2>
-              <p>Ruby on Rails, JavaScript, Bootstrap</p>
-            </div>
-          </div>
-          <div class="project project-2">
-            <a href="https://github.com/samira-estes-garcia/wishlistar" target="_blank"><img src="images/wishlistar-img.png" /></a>
-            <div class="project-title project-title-2">
-              <p>Wishlistar<span>Ruby, ActiveRecord, Sinatra, SQL, Bulma</span></p>
-            </div>
-          </div>
-          <div class="project project-3">
-            <a href="https://github.com/samira-estes-garcia/ATX-Quiz" target="_blank"><img src="images/ATX Quiz.png" /></a>
-            <div class="project-title project-title-3">
-              <p>ATX Quiz App<span>HTML, CSS, JavaScript, jQuery</span></p>
-            </div>
-          </div>
-          <div class="project project-4">
-            <a href="https://github.com/samira-estes-garcia/daily_meals" target="_blank"><img src="images/daily-meals-img.png" /></a>
-            <div class="project-title project-title-4">
-              <p>Daily Meals<span>Ruby, CLI</span></p>
-            </div>
-          </div>
-        </div> -->
       </section>
       <section id="contact">
         <h1>CONTACT</h1>
